created user models for requests
